--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="https://d340lr3764rrcr.cloudfront.net/Images/eos_gem.ico">
     <title> EthPryamid | Proof of Weak Hands</title>
     <link rel="stylesheet" href="css/jquery.modal.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.countdown.js" type="text/javascript"></script>
     <script src="js/moment.min.js" type="text/javascript"></script>
