--- a/coins.html
+++ b/coins.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/jquery.modal.min.css">
     <!--custom stylesheet -->
     <link rel="stylesheet" href="css/main.css?1507783168">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/flipclock.min.js"></script>
 <link rel="stylesheet" href="css/flipclock.css">
