--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title> EthPryamid | Proof of Weak Hands</title>
     <link rel="stylesheet" href="css/jquery.modal.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.countdown.js" type="text/javascript"></script>
     <script src="js/moment.min.js" type="text/javascript"></script>
@@ -58,8 +59,8 @@
         <div class="middle-content">
             <div class="container">
                 <div class="main-logo-wrapper">
-                    <img src="images/dawn_2.0-logo.png" alt="" class="visible-xs">
-                    <img src="images/dawn_2.0-logo.png" alt="" class="hidden-xs">
+                    <img src="images/BannerLogo.png" alt="" class="visible-xs">
+                    <img src="images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
                   A better self-sustaining, <b>secure</b> pyramid scheme.
@@ -75,9 +76,7 @@
         </div>
     </div>
 
-
-    <!--EOS Features section-->
-    <div class="eos-features-main">
+    <div class="ep-features-main">
         <div class="container">
             <div class="features-description visible-xs">
                 <h2>The Most Powerful &amp; Decentralized Pyramid Yet</h2>
@@ -89,7 +88,7 @@
                             <li>
                                 <div class="features-box col-4 feat-scalable">
                                     <div class="icon-main">
-                                        <i class="icon-scalable"></i>
+                                        <i class="fas fa-chart-line"></i>
                                     </div>
                                     <h4> PoWH Technology</h4>
                                     <div class="line"></div>
@@ -100,7 +99,7 @@
                             <li>
                                 <div class="features-box col-4 feat-flexible">
                                     <div class="icon-main">
-                                        <i class="icon-flexible"></i>
+                                        <i class="fas fa-exchange-alt"></i>
                                     </div>
                                     <h4> Dividends </h4>
                                     <div class="line"></div>
@@ -111,7 +110,7 @@
                             <li>
                                 <div class="features-box col-4 feat-usable">
                                         <div class="icon-main">
-                                                <i class="icon-usable"></i>
+                                                <i class="fas fa-sync-alt"></i>
                                             </div>
                                             <h4> Forever </h4>
                                             <div class="line"></div>
@@ -124,7 +123,7 @@
                     <div class="hidden-xs">
                         <div class="features-box mp col-4 feat-scalable">
                             <div class="icon-main">
-                                <i class="icon-scalable"></i>
+                                <i class="fas fa-chart-line"></i>
                             </div>
                             <h4> PoWH Technology</h4>
                                     <div class="line"></div>
@@ -133,20 +132,20 @@
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
                             <div class="icon-main">
-                                <i class="icon-flexible"></i>
+                                <i class="fas fa-exchange-alt"></i>
                             </div>
                             <h4> Dividends </h4>
                             <div class="line"></div>
-                            <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. The smartcontract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p> 
+                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p> 
                             
                         </div>
                         <div class="features-box mp col-4 feat-usable">
                             <div class="icon-main">
-                                <i class="icon-usable"></i>
+                                <i class="fas fa-sync-alt"></i>
                             </div>
                             <h4> Forever </h4>
                             <div class="line"></div>
-                            <p>Seriously, No Premine, no Self Destruct, no Dev Exit Scheme. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
                             </p>
                         </div>
                     </div>
