Button colour change

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   A better self-sustaining, <b>secure</b> pyramid scheme.
                 </div>
                 <div class="cta-group">
-                    <a href="coins.html" class="cta" target="_blank">Buy In</a>
+                    <a href="coins.html" class="cta" target="_blank" style="background: #f6c3ae;">Buy In</a>
                     <a href="" class="cta" target="_blank">Smart Contract</a>
                 </div>
                 <div class="banner-title hidden-xs">
@@ -164,7 +164,7 @@
                             <div class="faq-main-content" style="padding-top: 0px;">
                                 <div class="container">
                                     <div class="faq-header text-center">
-                                        <h2>Frequently Asked Questions</h2>
+                                        <h2 style="color: #f6c3ae;">Frequently Asked Questions</h2>
                                         <p class="is-white">Here are some common questions about EthPyramid<span class="trademark">TM</span></p>
                                     </div>
                                     <div class="sections">
