Fixed methods to reflect updated ABI

--- a/coins.html
+++ b/coins.html
@@ -217,7 +217,7 @@
                                 </p>                                    </div>
                              <div class="sections">
                                  <h4 id="4">Q: Why should I participate in this over PoWHCoin?</h4>
-                                 <p>EthPyramid encourages holding more. You can directly reinvest your dividends without having to withdraw and causing a panic. 10% of every token sell is also redistrubted to holders – encouraging STRONG HANDS.<p>
+                                 <p>EthPyramid encourages holding more. You can directly reinvest your dividends without having to withdraw and causing a panic. 10% of every token sell is also redistributed to holders – encouraging STRONG HANDS.<p>
                               </div>
                              <div class="sections">
                                 <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
