--- a/coins.html
+++ b/coins.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="https://d340lr3764rrcr.cloudfront.net/Images/eos_gem.ico">
-    <title> EthPyramid | Proof of Weak Hands </title>
+    <title> ethPyramid </title>
     <link rel="stylesheet" href="css/jquery.modal.min.css">
     <!--custom stylesheet -->
     <link rel="stylesheet" href="css/main.css?1507783168">
