--- a/coins.html
+++ b/coins.html
@@ -218,6 +218,10 @@
                                 <p>A: Yes, EthPyramid Tokens are an <a href="https://theethereum.wiki/w/index.php/ERC20_Token_Standard">ERC20 standard token</a> built on the ethereum blockchain that you can sell on this site. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
                              </div>
                              <div class="sections">
+                                <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
+                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawled ponzi systems are not present in EthPryamid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                             </div>
+                             <div class="sections">
                                 <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
                                 <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
 
