--- a/index.html
+++ b/index.html
@@ -172,14 +172,13 @@
                                        <p>A: Yes, EthPyramid Tokens are an <a href="https://theethereum.wiki/w/index.php/ERC20_Token_Standard">ERC20 standard token</a> built on the ethereum blockchain that you can sell on this site. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
                                     </div>
                                     <div class="sections">
-                                       <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                       <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
-
-                                       </p>                                    </div>
+                                      <h4 id="3">Q: Is EthPyramid secure?</h4>
+                                      <p>A: Yes, our dev team has put many hours into patching any potential security exploits. No one can access the internal functions of the contract once it is running.</p>
+                                    </div>
                                     <div class="sections">
-                                        <h4 id="4">Q: Why should I participate in this over PoWHCoin?</h4>
-                                        <p>EthPyramid encourages holding more. You can directly reinvest your dividends without having to withdraw and causing a panic. 10% of every token sell is also redistrubted to holders – encouraging STRONG HANDS.<p>
-                                     </div>
+                                      <h4 id="4">Q: What makes EthPyramid different from other pyramid tokens?</h4>
+                                      <p>EthPyramid encourages holding more. You can directly reinvest your dividends without having to withdraw and causing a panic. 10% of every token sell is also redistrubted to holders – encouraging STRONG HANDS.<p>
+                                  </div>
                                     <div class="sections">
                                        <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
                                        <p>A: You need to install <a href="https://metamask.io/">Metamask</a> and also need to buy some Ether (ETH), probably from something like Coinbase.</p>
