FAQ update on index.html and coins.html

--- a/coins.html
+++ b/coins.html
@@ -227,8 +227,8 @@
 
                                 </p>                                    </div>
                              <div class="sections">
-                                 <h4 id="4">Q: Why should I participate in this over PoWHCoin?</h4>
-                                 <p>EthPyramid encourages holding more. You can directly reinvest your dividends without having to withdraw and causing a panic. 10% of every token sell is also redistributed to holders – encouraging STRONG HANDS.<p>
+                                 <h4 id="4">Q: Is EthPyramid secure?</h4>
+                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
                               </div>
                              <div class="sections">
                                 <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
