--- a/index.html
+++ b/index.html
@@ -163,31 +163,31 @@
                     <div class="faq-main">
                             <div class="faq-main-content" style="padding-top: 0px;">
                                 <div class="container">
-                                    <div class="faq-header text-center">
-                                        <h2 style="color: #f6c3ae;">Frequently Asked Questions</h2>
-                                        <p class="is-white">Here are some common questions about EthPyramid<span class="trademark">TM</span></p>
-                                    </div>
                                     <div class="sections">
-                                       <h4 id="1">Q: Is this a real thing?</h4>
-                                       <p>A: Yes, EthPyramid Tokens are an <a href="https://theethereum.wiki/w/index.php/ERC20_Token_Standard">ERC20 standard token</a> built on the ethereum blockchain that you can sell on this site. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
-                                    </div>
-                                    <div class="sections">
-                                       <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                       <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
+                                <h4 id="1">Q: Is this a real thing?</h4>
+                                <p>A: Yes, EthPyramid Tokens are an <a href="https://theethereum.wiki/w/index.php/ERC20_Token_Standard">ERC20 standard token</a> built on the ethereum blockchain that you can sell on this site. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                             </div>
+                             <div class="sections">
+                                <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
+                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in EthPryamid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                             </div>
+                             <div class="sections">
+                                <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
+                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
 
-                                       </p>                                    </div>
-                                    <div class="sections">
-                                        <h4 id="4">Q: Why should I participate in this over PoWHCoin?</h4>
-                                        <p>EthPyramid encourages holding more. You can directly reinvest your dividends without having to withdraw and causing a panic. 10% of every token sell is also redistrubted to holders – encouraging STRONG HANDS.<p>
-                                     </div>
-                                    <div class="sections">
-                                       <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
-                                       <p>A: You need to install <a href="https://metamask.io/">Metamask</a> and also need to buy some Ether (ETH), probably from something like Coinbase.</p>
-                                    </div>
-                                    <div class="sections">
-                                       <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                       <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
-                                    </div>
+                                </p>                                    </div>
+                             <div class="sections">
+                                 <h4 id="4">Q: Is EthPyramid secure?</h4>
+                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                              </div>
+                             <div class="sections">
+                                <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
+                                <p>A: You need to install <a href="https://metamask.io/">Metamask</a> and also need to buy some Ether (ETH), probably from something like Coinbase.</p>
+                             </div>
+                             <div class="sections">
+                                <h4 id="6">Q: Is this coin pre-mined?</h4>
+                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                             </div>
                                 </div>
                             </div>
                         </div>
