--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="./resources/" target="_blank"> Smart Contract </a>
+                            <li><a href="" target="_blank"> Smart Contract </a>
                             </li>
                             <li><a href="coins.html" target="_blank">My Coins</a>
                             </li>
                             <li>
-                                <a href="images/triangly.jpg">Whitepaper</a>
+                                <a href="whitepaper.html">Whitepaper</a>
                             </li>
                         </ul>
                     </div>
