remove ERC20 from FAQ
index.html
coins.html
whitepaper.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="container">
                                     <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are an <a href="https://theethereum.wiki/w/index.php/ERC20_Token_Standard">ERC20 standard token</a> built on the ethereum blockchain that you can sell on this site. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
