--- a/coins.html
+++ b/coins.html
@@ -56,7 +56,7 @@
                                             <div class="row top-row clearfix">
                                                 <div class="col-4">
                                                     <div class="buy-eos">
-                                                        <img src="images/spinning.gif" alt="">
+                                                        <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
                                                         <input type="number" id="purchase-amount" class="form-control" placeholder="Amount of ETH to convert (e.g. 0.5)">
                                                         <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
                                                                                     </div>
