changed header color

--- a/coins.html
+++ b/coins.html
@@ -50,7 +50,7 @@
                                     <div class="token-content" id="buy-panel">
                                          <div id="token-phase-1" class="token-phase-1">
                                             <div class="title-bar clearfix visible-xs">
-                                                <h2 class="float-left">EthPyramid<span class="trademark">TM</span> Tokens </h2>
+                                                <h2 class="float-left" style="color:white">EthPyramid<span class="trademark">TM</span> Tokens </h2>
                                                 <span class="period float-right">Contract Balance: <span class="current-distribution-period">0.00</span> ETH</span>
                                             </div>
                                             <div class="row top-row clearfix">
@@ -64,7 +64,7 @@
                                                 <div class="col-8">
                                                     <div class="token-sale-count">
                                                         <div class="title-bar clearfix hidden-xs">
-                                                            <h2 class="float-left">EthPyramid<span class="trademark">TM</span> Tokens </h2>
+                                                            <h2 class="float-left" style="color:white">EthPyramid<span class="trademark">TM</span> Tokens </h2>
                                                             <span class="period float-right">Contract Balance  <span class="current-distribution-period">0.00</span> ETH</span>
                                                         </div>
                         
