--- a/coins.html
+++ b/coins.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="title" content="EthPyramid">
+    <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="https://d340lr3764rrcr.cloudfront.net/Images/eos_gem.ico">
-    <title> EthPyramid | Proof of Weak Hands </title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <title> EthPyramid | Buy / Sell Coins</title>
     <link rel="stylesheet" href="css/jquery.modal.min.css">
     <!--custom stylesheet -->
     <link rel="stylesheet" href="css/main.css?1507783168">
@@ -32,6 +33,21 @@
                         <a href="/">
                             <img src="images/minilogo.png" alt="">
                         </a>
+                    </div>
+                    <div id="nav-icon">
+                        <span></span> <span></span>
+                        <span></span>
+                    </div>
+                    <div class="navigation">
+                        <ul>
+                            <li><a href="" target="_blank"> Smart Contract </a>
+                            </li>
+                            <li><a href="coins.html" target="_blank">My Coins</a>
+                            </li>
+                            <li>
+                                <a href="whitepaper.html">Whitepaper</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
