--- a/coins.html
+++ b/coins.html
@@ -42,10 +42,10 @@
                         <ul>
                             <li><a href="" target="_blank"> Smart Contract </a>
                             </li>
-                            <li><a href="coins.html" target="_blank">My Coins</a>
+                            <li><a href="coins.html">My Coins</a>
                             </li>
                             <li>
-                                <a href="whitepaper.html">Whitepaper</a>
+                                <a href="whitepaper.html" target="_blank">Whitepaper</a>
                             </li>
                         </ul>
                     </div>
