--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         <ul>
                             <li><a href="" target="_blank"> Smart Contract </a>
                             </li>
-                            <li><a href="coins.html" target="_blank">My Coins</a>
+                            <li><a href="coins.html">My Coins</a>
                             </li>
                             <li>
-                                <a href="whitepaper.html">Whitepaper</a>
+                              <a href="whitepaper.html" target="_blank">Whitepaper</a>
                             </li>
                         </ul>
                     </div>
@@ -66,7 +66,7 @@
                   A better self-sustaining, <b>secure</b> pyramid scheme.
                 </div>
                 <div class="cta-group">
-                    <a href="coins.html" class="cta" target="_blank" style="background: #d69361;">Buy In</a>
+                    <a href="coins.html" class="cta" style="background: #d69361;">Buy In</a>
                     <a href="" class="cta" target="_blank">Smart Contract</a>
                 </div>
                 <div class="banner-title hidden-xs">
