--- a/coins.html
+++ b/coins.html
@@ -53,7 +53,6 @@
             </div>
         </div>
         <div class="faq-main-content">
-                <div class="container">
                         <div class="faq-header text-center">
                             <h2>Purchase EthPyramid Tokens </h2>
                             <p class="is-white">(ROPSTEN TESTNET ONLY. DO NOT SEND REAL ETH)</p>
@@ -61,7 +60,7 @@
                         <script type="text/javascript" src="js/poh.js"></script>
 
 
-                        <div id="token-sale" class="token-main">
+                        <div id="token-sale" class="token-bg">
                                 <div class="container">
                                     <div class="token-content" id="buy-panel">
                                          <div id="token-phase-1" class="token-phase-1">
@@ -229,6 +228,7 @@
                                     </div>
                                 </div>
                             </div>
+							<div class="container">
                             <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
                                 <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
@@ -254,7 +254,7 @@
                                 <h4 id="6">Q: Is this coin pre-mined?</h4>
                                 <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
                              </div>
-                    </div>
+							 </div>
                 <div id="root"></div>
 
         </div>
