Coin page changes

--- a/coins.html
+++ b/coins.html
@@ -54,7 +54,7 @@
         </div>
         <div class="faq-main-content">
                         <div class="faq-header text-center">
-                            <h2>Purchase EthPyramid Tokens </h2>
+                            <h2 style="color:#d69361">Purchase EthPyramid Tokens </h2>
                             <p class="is-white">(ROPSTEN TESTNET ONLY. DO NOT SEND REAL ETH)</p>
                         </div>
                         <script type="text/javascript" src="js/poh.js"></script>
