--- a/coins.html
+++ b/coins.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/main.css?1507783168">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 <script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/quote.js" type="text/javascript"></script>
 <script src="js/flipclock.min.js"></script>
 <link rel="stylesheet" href="css/flipclock.css">
 <link rel="icon" 
@@ -55,6 +56,8 @@
         <div class="faq-main-content">
                         <div class="faq-header text-center">
                             <h2 style="color:#d69361">Purchase EthPyramid Tokens </h2>
+							<div id="quoteDisplay"></div>
+							<script>newQuote()</script>
                             <p class="is-white">(ROPSTEN TESTNET ONLY. DO NOT SEND REAL ETH)</p>
                         </div>
                         <script type="text/javascript" src="js/poh.js"></script>
