--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                                     <div class="icon-main">
                                         <i class="fas fa-chart-line"></i>
                                     </div>
-                                    <h4> PoWH Technology</h4>
+                                    <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>Proof of Weak Hands. When someone purchases a token, 10% Of the buy-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked POWH Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPryamid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                                 </div>
                             </li>
@@ -114,7 +114,7 @@
                                             </div>
                                             <h4> Forever </h4>
                                             <div class="line"></div>
-                                            <p>Seriously, No Premine, no Self Destruct, no Dev Exit Scheme. This contract will fluctuate in price and pay out dividends until the ethereum network dies.
+                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
                                             </p>
                                 </div>
                             </li>
@@ -125,9 +125,9 @@
                             <div class="icon-main">
                                 <i class="fas fa-chart-line"></i>
                             </div>
-                            <h4> PoWH Technology</h4>
+                            <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>Proof of Weak Hands. When someone purchases a token, 10% Of the buy-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked POH Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPryamid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
