--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
                             </li>
                             <li><a href="coins.html">My Coins</a>
                             </li>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="cta-group">
                     <a href="coins.html" class="cta" style="background: #d69361;">Buy In</a>
-                    <a href="" class="cta" target="_blank">Smart Contract</a>
+                    <a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" class="cta" target="_blank">Smart Contract</a>
                 </div>
                 <div class="banner-title hidden-xs">
                     <h2>Strong Hands Only</h2>
