removed image updated link

--- a/coins.html
+++ b/coins.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="" target="_blank"> Smart Contract </a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
                             </li>
                             <li><a href="coins.html">My Coins</a>
                             </li>
