Added social links

--- a/coins.html
+++ b/coins.html
@@ -13,6 +13,7 @@
     <!--custom stylesheet -->
     <link rel="stylesheet" href="css/main.css?1507783168">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
+		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/quote.js" type="text/javascript"></script>
 <script src="js/flipclock.min.js"></script>
@@ -28,6 +29,10 @@
 <div class="main-outer text-center faq-main">
     <div class="introduction-banner">
         <div class="header sticky-header">
+				<div class="socialBits">
+		<a href="https://www.reddit.com/r/ethpyramid/" target="_blank"><i class="fab fa-reddit-square" style="margin-right:10px; color:white;"></i></a>
+		<a href="https://discord.gg/FmKsvBe" target="_blank"><i class="fab fa-discord" style="color:white"></i></a>
+		</div>
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
