--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <!-- Homepage Banner -->
     <div class="introduction-banner">
         <div class="header sticky-header">
+		<div class="socialBits">
+		<a href="https://www.reddit.com/r/ethpyramid/" target="_blank"><i class="fab fa-reddit-square" style="margin-right:10px; color:white;"></i></a>
+		<a href="https://discord.gg/FmKsvBe" target="_blank"><i class="fab fa-discord" style="color:white"></i></a>
+		</div>
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
