--- a/coins.html
+++ b/coins.html
@@ -30,8 +30,9 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 				<div class="socialBits">
+		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
 		<a href="https://www.reddit.com/r/ethpyramid/" target="_blank"><i class="fab fa-reddit-square" style="margin-right:10px; color:white;"></i></a>
-		<a href="https://discord.gg/FmKsvBe" target="_blank"><i class="fab fa-discord" style="color:white"></i></a>
+		<a href="https://discord.gg/FmKsvBe" target="_blank"><i class="fab fa-discord" style="color:white"></i></a>	
 		</div>
             <div class="align-center header-inner">
                 <div class="container clearfix">
