--- a/coins.html
+++ b/coins.html
@@ -202,6 +202,16 @@
                                     </div>
                                 </div>
                             </div>
+							<div class="graphEmbed" style="background:white; margin-top:-30px;">
+							<div class="container" style="padding-bottom:30px;">
+							
+							                        <div class="text-center" style="padding-top:30px;">
+                            <h2 style="color:#d69361">EthPyramid - Historical Chart (Sell Price)</h2>
+                        </div>
+							<embed src="https://powhchart.com/graphs.html?asset=ethpyramid&version=3896" style="width:100%; height:575px;">
+							<span style="font-weight:100;">Created by:</span>&nbsp;&nbsp;<a href="https://www.reddit.com/user/JuiceInNuggets/" style="color:green;" target="_blank">/u/JuiceInNuggets</a> - Donate ETH: 0xEfFcc2Db685C04276153Bb91Ca3FC4297a44f04D 
+							</div>
+							</div>
 							<div class="container" style="margin-top:50px; border-bottom: 1px solid white; padding-bottom: 20px; margin-bottom: 40px;">
 	<h5 style="color:white;">Instructions for those who want to help build the great pyramid of Ether:</h5>
 	<p></p><li>First of all, install MetaMask <a href="https://metamask.io/">here</a> and put some Ether in it.</li><p></p>
