--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     </div>
                                     <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPryamid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                                 </div>
                             </li>
@@ -132,7 +132,7 @@
                             </div>
                             <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPryamid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an Ethpyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
@@ -174,7 +174,7 @@
                              </div>
                              <div class="sections">
                                 <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
-                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in EthPryamid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in Ethpyramid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
