--- a/au/coins.html
+++ b/au/coins.html
@@ -7,17 +7,17 @@
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <title> EthPyramid | Buy / Sell Coins</title>
-    <link rel="stylesheet" href="css/jquery.modal.min.css">
+    <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <!--custom stylesheet -->
-    <link rel="stylesheet" href="css/main.css?1507783168">
+    <link rel="stylesheet" href="../css/main.css?1507783168">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/quote.js" type="text/javascript"></script>
-<script src="js/flipclock.min.js"></script>
-<link rel="stylesheet" href="css/flipclock.css">
+<script src="../js/jquery.min.js" type="text/javascript"></script>
+<script src="../js/quote.js" type="text/javascript"></script>
+<script src="../js/flipclock.min.js"></script>
+<link rel="stylesheet" href="../css/flipclock.css">
 <link rel="icon" 
       type="image/png" 
       href="/favicon.ico">
@@ -28,10 +28,10 @@
   <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center faq-main">
     <div class="introduction-banner">
-        <div class="header sticky-header">
-		<div class="flagBits">
-		<a href="au/coins.html"><img src="images/AU.jpg"></a>
-		<a href="#"><img src="images/UK.jpg"></a>
+        <div class="header sticky-header Straya">
+				<div class="flagBits">
+		<a href="#"><img src="../images/AU.jpg"></a>
+		<a href="../coins.html"><img src="../images/UK.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
@@ -42,7 +42,7 @@
                 <div class="container clearfix">
                     <div class="logo">
                         <a href="/">
-                            <img src="images/minilogo.png" alt="">
+                            <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
                     <div id="nav-icon">
@@ -56,7 +56,7 @@
                             <li><a href="coins.html">My Coins</a>
                             </li>
                             <li>
-                                <a href="whitepaper.html" target="_blank">Whitepaper</a>
+                                <a href="../whitepaper.html" target="_blank">Whitepaper</a>
                             </li>
                         </ul>
                     </div>
@@ -64,8 +64,8 @@
             </div>
         </div>
         <div class="faq-main-content">
-                        <div class="faq-header text-center">
-                            <h2 style="color:#d69361">Purchase EthPyramid Tokens </h2>
+                        <div class="faq-header text-center Straya">
+                            <h2 style="color:#d69361">Purchase EthPyramid Tokens, cunts </h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
@@ -83,9 +83,9 @@
                                             <div class="row top-row clearfix">
                                                 <div class="col-4">
                                                     <div class="buy-eos">
-                                                        <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
+                                                        <img src="../images/spinning.gif" alt="" style="margin-bottom: 20px;" class="Straya">
                                                         <input type="number" id="purchase-amount" class="form-control" placeholder="Amount of ETH to convert (e.g. 0.5)">
-                                                        <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
+                                                        <button id="buy-eos-tokens" class='cta' >BUY Tokens cunts</button>
                                                                                     </div>
                                                 </div>
                                                 <div class="col-8">
@@ -206,7 +206,7 @@
                                     </div>
                                 </div>
                             </div>
-							<div class="graphEmbed" style="background:white; margin-top:-30px;">
+							<div class="graphEmbed Straya" style="background:white; margin-top:-30px;">
 							<div class="container" style="padding-bottom:30px;">
 							
 							                        <div class="text-center" style="padding-top:30px;">
