Add jekyll blog

--- a/coins.html
+++ b/coins.html
@@ -160,7 +160,7 @@
                                                             <li>
                                                                 <div class="features-box col-4 feat-flexible">
                                                                     
-                                                                    <button id="reinvest-btn-m" class='cta' >Reinvest</button>
+                                                                    <button id="reinvest-btn-m" class='cta' >Buy With Dividends</button>
                                                                     <div class="line"></div>
                                                                     <p>Reinvest your dividends into tokens.</p>
                                                                 </div>
@@ -183,10 +183,10 @@
                                                                     <p>Your tokens will be sold at the sell-price and will be converted into dividends balance.</p>
                                                             </div>
                                                             <div class="features-box col-4 feat-flexible">
-                                                                    <button id="reinvest-btn" class='cta' >Reinvest</button>
+                                                                    <button id="reinvest-btn" class='cta' >Buy With Dividends</button>
 
                       
-                                                                    <p>Reinvest your dividends into tokens.</p>
+                                                                    <p>Uses your dividend balance to buy more tokens at the current rate.</p>
                                                             </div>
                                                             <div class="features-box col-4 feat-usable">
                                                                     <button id="withdraw-btn" class='cta' >Withdraw</button>
