--- a/coins.html
+++ b/coins.html
@@ -64,7 +64,12 @@
             </div>
         </div>
         <div class="faq-main-content">
-                        <div class="faq-header text-center">
+
+		<div style="float: right">
+			<iframe src="https://titanembeds.com/embed/408119545379815434?defaultchannel=409635306942496768" height="600" width="300" frameborder="0"></iframe>
+		</div>
+
+		<div class="faq-header text-center">
                             <h2 style="color:#d69361">Purchase EthPyramid Tokens </h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
