--- a/coins.html
+++ b/coins.html
@@ -65,9 +65,6 @@
         </div>
         <div class="faq-main-content">
 
-		<div style="float: right">
-			<iframe src="https://titanembeds.com/embed/408119545379815434?defaultchannel=409635306942496768" height="600" width="300" frameborder="0"></iframe>
-		</div>
 
 		<div class="faq-header text-center">
                             <h2 style="color:#d69361">Purchase EthPyramid Tokens </h2>
@@ -76,8 +73,7 @@
                         </div>
                         <script type="text/javascript" src="js/poh.js"></script>
 
-
-                        <div id="token-sale" class="token-bg">
+                        <div id="token-sale" class="token-bg" style="float: left; width: 800px;">
                                 <div class="container">
                                     <div class="token-content" id="buy-panel">
                                          <div id="token-phase-1" class="token-phase-1">
@@ -211,7 +207,11 @@
                                     </div>
                                 </div>
                             </div>
-							<div class="graphEmbed" style="background:white; margin-top:-30px;">
+
+		<div style="float: right; width: 400px; padding 10px;">
+			<iframe src="https://titanembeds.com/embed/408119545379815434?defaultchannel=409635306942496768" height="900" width="400" frameborder="0"></iframe>
+		</div>
+							<div class="graphEmbed clearfix" style="background:white; margin-top:-30px;">
 							<div class="container" style="padding-bottom:30px;">
 							
 							<div class="text-center" style="padding-top:30px;">
