--- a/coins.html
+++ b/coins.html
@@ -65,7 +65,6 @@
         </div>
         <div class="faq-main-content">
 
-
 		<div class="faq-header text-center">
                             <h2 style="color:#d69361">Purchase EthPyramid Tokens </h2>
 							<div id="quoteDisplay"></div>
@@ -73,8 +72,8 @@
                         </div>
                         <script type="text/javascript" src="js/poh.js"></script>
 
-                        <div id="token-sale" class="token-bg" style="float: left; width: 800px;">
-                                <div class="container">
+                        <div id="token-sale" class="token-bg">
+                                <div class="container" style="float: left; width: 800px;">
                                     <div class="token-content" id="buy-panel">
                                          <div id="token-phase-1" class="token-phase-1">
                                             <div class="title-bar clearfix visible-xs">
@@ -206,11 +205,10 @@
                                             <h3>To interact with the network, you must have <a href="https://metamask.io/">Metamask</a> installed and setup.</h3>
                                     </div>
                                 </div>
+                                <div style="float: right; width: 400px; padding 10px;">
+                                    <iframe src="https://titanembeds.com/embed/408119545379815434?defaultchannel=409635306942496768" height="900" width="400" frameborder="0"></iframe>
+                                </div>
                             </div>
-
-		<div style="float: right; width: 400px; padding 10px;">
-			<iframe src="https://titanembeds.com/embed/408119545379815434?defaultchannel=409635306942496768" height="900" width="400" frameborder="0"></iframe>
-		</div>
 							<div class="graphEmbed clearfix" style="background:white; margin-top:-30px;">
 							<div class="container" style="padding-bottom:30px;">
 							
