--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </li>
                             <li><a href="coins.html">My Coins</a>
                             </li>
-							<li><a href="blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
                             </li>
                             <li>
                               <a href="whitepaper.html" target="_blank">Whitepaper</a>
