--- a/coins.html
+++ b/coins.html
@@ -54,7 +54,7 @@
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
                             </li>
                             <li><a href="coins.html">My Coins</a>
-							<li><a href="blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
                             </li>
                             </li>
                             <li>
