--- a/au/coins.html
+++ b/au/coins.html
@@ -53,7 +53,9 @@
                         <ul>
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank"> Smart Contract </a>
                             </li>
-                            <li><a href="coins.html">My Coins</a>
+                            <li><a href="coins.html">My Moolah</a>
+                            </li>
+							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
                             </li>
                             <li>
                                 <a href="../whitepaper.html" target="_blank">Whitepaper</a>
