--- a/coins.html
+++ b/coins.html
@@ -89,7 +89,41 @@
                                                             <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
                                                             <input type="number" id="purchase-amount" class="form-control" placeholder="Amount of ETH to convert (e.g. 0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
-                                                                                        </div>
+                                                        </div>
+                                                        <select id="currency">
+                                                            <option>USD</option>
+                                                            <option>AUD</option>
+                                                            <option>BRL</option>
+                                                            <option>CAD</option>
+                                                            <option>CHF</option>
+                                                            <option>CLP</option>
+                                                            <option>CNY</option>
+                                                            <option>CZK</option>
+                                                            <option>DKK</option>
+                                                            <option>EUR</option>
+                                                            <option>GBP</option>
+                                                            <option>HKD</option>
+                                                            <option>HUF</option>
+                                                            <option>IDR</option>
+                                                            <option>ILS</option>
+                                                            <option>INR</option>
+                                                            <option>JPY</option>
+                                                            <option>KRW</option>
+                                                            <option>MXN</option>
+                                                            <option>MYR</option>
+                                                            <option>NOK</option>
+                                                            <option>NZD</option>
+                                                            <option>PHP</option>
+                                                            <option>PKR</option>
+                                                            <option>PLN</option>
+                                                            <option>RUB</option>
+                                                            <option>SEK</option>
+                                                            <option>SGD</option>
+                                                            <option>THB</option>
+                                                            <option>TRY</option>
+                                                            <option>TWD</option>
+                                                            <option>ZAR</option>
+                                                        </select>
                                                     </div>
                                                     <div class="col-8">
                                                         <div class="token-sale-count">
