added fr folder and fixed src and href

--- a/au/coins.html
+++ b/au/coins.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="../css/flipclock.css">
 <link rel="icon" 
       type="image/png" 
-      href="/favicon.ico">
+      href="../favicon.ico">
 </head>
 
 <body class="faq-body">
@@ -32,6 +32,7 @@
 				<div class="flagBits">
 		<a href="#"><img src="../images/AU.jpg"></a>
 		<a href="../coins.html"><img src="../images/UK.jpg"></a>
+		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
