--- a/fr/coins.html
+++ b/fr/coins.html
@@ -7,43 +7,43 @@
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <title> EthPyramid | Buy / Sell Coins</title>
-    <link rel="stylesheet" href="css/jquery.modal.min.css">
+    <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <!--custom stylesheet -->
-    <link rel="stylesheet" href="css/main.css?1507783168">
+    <link rel="stylesheet" href="../css/main.css?1507783168">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/quote.js" type="text/javascript"></script>
-<script src="js/flipclock.min.js"></script>
-<link rel="stylesheet" href="css/flipclock.css">
-<link rel="icon" 
-      type="image/png" 
-      href="favicon.ico">
+<script src="../js/jquery.min.js" type="text/javascript"></script>
+<script src="../js/quote.js" type="text/javascript"></script>
+<script src="../js/flipclock.min.js"></script>
+<link rel="stylesheet" href="../css/flipclock.css">
+<link rel="icon"
+      type="image/png"
+      href="../favicon.ico">
 </head>
 
 <body class="faq-body">
-        
+
   <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center faq-main">
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
-		<a href="au/coins.html"><img src="images/AU.jpg"></a>
-		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
-		<a href="#"><img src="images/UK.jpg"></a>
+		<a href="#"><img src="../images/FR.jpg"></a>
+		<a href="../coins.html"><img src="../images/UK.jpg"></a>
+		<a href="../au/coins.html"><img src="../images/AU.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
 		<a href="https://www.reddit.com/r/ethpyramid/" target="_blank"><i class="fab fa-reddit-square" style="margin-right:10px; color:white;"></i></a>
-		<a href="https://discord.gg/FmKsvBe" target="_blank"><i class="fab fa-discord" style="color:white"></i></a>	
+		<a href="https://discord.gg/FmKsvBe" target="_blank"><i class="fab fa-discord" style="color:white"></i></a>
 		</div>
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
                         <a href="/">
-                            <img src="images/minilogo.png" alt="">
+                            <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
                     <div id="nav-icon">
@@ -73,7 +73,7 @@
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
-                        <script type="text/javascript" src="js/poh.js"></script>
+                        <script type="text/javascript" src="../js/poh.js"></script>
 
                         <div id="token-sale" class="token-bg">
                                 <div style="margin: 0 auto; width: 1200px">
@@ -87,7 +87,7 @@
                                                 <div class="row top-row clearfix">
                                                     <div class="col-4">
                                                         <div class="buy-eos">
-                                                            <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
+                                                            <img src="../images/spinning.gif" alt="" style="margin-bottom: 20px;">
                                                             <input type="number" id="purchase-amount" class="form-control" placeholder="Amount of ETH to convert (e.g. 0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
                                                                                         </div>
@@ -217,7 +217,7 @@
                             </div>
 							<div class="graphEmbed clearfix" style="background:white; margin-top:-30px;">
 							<div class="container" style="padding-bottom:30px;">
-							
+
 							<div class="text-center" style="padding-top:30px;">
 								<h2 style="color:#d69361">EthPyramid - Historical Chart (Sell Price)</h2>
 							</div>
