--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="js/jquery.bxslider.min.js"></script>
     <link rel="icon" 
     type="image/png" 
-    href="/favicon.ico">
+    href="favicon.ico">
 
 </head>
 
@@ -33,7 +33,8 @@
         <div class="header sticky-header">
 		<div class="flagBits">
 		<a href="au/index.html"><img src="images/AU.jpg"></a>
-		<a href="#"><img src="images/UK.jpg"></a>
+		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
+        <a href="#"><img src="images/UK.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
